# static-generator

./: .gitignore  Makefile  makesite.py  pyproject.toml  requirements.txt
.github/workflows/: make-site.yml
config/: params.json
content/: about.html
content/news/: 2023-01-10-banner.html
layout/: item.html  item.xml  page.html
scripts/: generate.py
static/css/: style.css
test/: test_content.py  test_main.py
tests/: test_content.py  test_file_io.py  test_list.py  test_main.py  test_pages.py  test_path.py
