[project]
name = "static-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown",
]

[project.scripts]
makesite = "makesite:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pylint>=4.0.5",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
